--- a/form.html
+++ b/form.html
@@ -10,12 +10,25 @@
 </head>
 
 <body>
-    <p style="top: 10px; z-index: 2;">Выбор варианта</p>
-    <form style="top: 10px; z-index: 0;" class="container col cream-block">
-        <div >
-            Какой раздел психологии изучает познавательный процессы человеческого сознания?
+    <h2 class="header">Выбор варианта</h2>
+    <form class="container col cream-block">       
+        <div class="form">
+            <div class="text">
+                <p>Какой раздел психологии изучает познавательный процессы человеческого сознания?</p>
+            </div>
+            <div >
+                <div class="inputs"><input type="radio" id="1" name="form"><label for="1">Психоанализ</label></div>
+                <div class="inputs"><input type="radio" id="2" name="form"><label for="1">Когнитивная психология</label></div>
+                <div class="inputs"><input type="radio" id="3" name="form"><label for="1">Когнитивная психология</label></div>
+                <div class="inputs"><input type="radio" id="4" name="form"><label for="1">Гуманистичиская психология</label></div>
+                <div class="inputs"><input type="radio" id="5" name="form"><label for="1">Гештальт-психология</label></div>
+                <div class="submit">
+                    <input type="submit" value="Ответить">
+                </div>
+            </div>
+            
         </div>
-    </form>
+        </form>
 </body>
 
 </html>
